@startuml
    namespace com.hack23.cia.model.external.val.kommunvalkrets.impl {

        class SwedenMunicipalityData [[SwedenMunicipalityData.html]] {
            #code: BigInteger
            #municipalName: String
            #hjid: Long
            +getCode(): BigInteger
            +setCode(BigInteger): void
            +getMunicipalName(): String
            +setMunicipalName(String): void
            +getHjid(): Long
            +setHjid(Long): void
        }

        class SwedenCountyDataContainer [[SwedenCountyDataContainer.html]] {
            #hjid: Long
            +getHjid(): Long
            +setHjid(Long): void
        }

        class ObjectFactory [[ObjectFactory.html]] {
            +createSwedenCountyDataContainer(): SwedenCountyDataContainer
            +createSwedenCountyData(): SwedenCountyData
            +createSwedenMunicipalityData(): SwedenMunicipalityData
            +createSwedenMunicipalityElectionRegionData(): SwedenMunicipalityElectionRegionData
            +createRoot(SwedenCountyDataContainer): JAXBElement<SwedenCountyDataContainer>
        }

        class SwedenMunicipalityElectionRegionData [[SwedenMunicipalityElectionRegionData.html]] {
            #code: BigInteger
            #electionRegionName: String
            #numberOfVoters: BigInteger
            #firstRound: BigInteger
            #rest: String
            #secondRound: BigInteger
            #numberOfSeats: BigInteger
            #hjid: Long
            +getCode(): BigInteger
            +setCode(BigInteger): void
            +getElectionRegionName(): String
            +setElectionRegionName(String): void
            +getNumberOfVoters(): BigInteger
            +setNumberOfVoters(BigInteger): void
            +getFirstRound(): BigInteger
            +setFirstRound(BigInteger): void
            +getRest(): String
            +setRest(String): void
            +getSecondRound(): BigInteger
            +setSecondRound(BigInteger): void
            +getNumberOfSeats(): BigInteger
            +setNumberOfSeats(BigInteger): void
            +getHjid(): Long
            +setHjid(Long): void
        }

        class SwedenCountyData [[SwedenCountyData.html]] {
            #code: BigInteger
            #countyName: String
            #hjid: Long
            +getCode(): BigInteger
            +setCode(BigInteger): void
            +getCountyName(): String
            +setCountyName(String): void
            +getHjid(): Long
            +setHjid(Long): void
        }

        com.hack23.cia.model.common.api.ModelObject <|.. SwedenMunicipalityData
        SwedenMunicipalityData --> "*" SwedenMunicipalityElectionRegionData: kommunvalkrets
        com.hack23.cia.model.common.api.ModelObject <|.. SwedenCountyDataContainer
        SwedenCountyDataContainer --> "*" SwedenCountyData: countyRegions
        com.hack23.cia.model.common.api.ModelObject <|.. SwedenMunicipalityElectionRegionData
        com.hack23.cia.model.common.api.ModelObject <|.. SwedenCountyData
        SwedenCountyData --> "*" SwedenMunicipalityData: kommun
    }

    namespace com.hack23.cia.model.common.api {
        interface ModelObject
    }

    center footer UMLDoclet 2.0.5, PlantUML 1.2019.08
@enduml
